--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
                     <div class="editor_btn">
                         <div class="editorchoice_btn flex">
                             <button type="button" class="editor-button-prev" aria-label="Previous slide" ></button>
-                            <button type="button" class="editor-button-next slick-next slick-arrow" aria-label="Next slide" ></button>
+                            <button type="button" class="editor-button-next" aria-label="Next slide" ></button>
                         </div>
                         <div class="ebookchoice_btn flex" style="display: none;">
                             <button type="button" class="editor-button-prev" aria-label="Previous slide"></button>
