removed unused classname

--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,7 @@
                             <button type="button" class="editor-button-next" aria-label="Next slide"></button>
                         </div>
                     </div>
-                    <div class="swiper_section swiper-container editor_list active" id="editorchoice">
+                    <div class="swiper_section editor_list active" id="editorchoice">
                         <div class="swiper_wrapper">
                             <div class="swiper_item">
                                 <div class="cover">
