--- a/index.html
+++ b/index.html
@@ -2018,7 +2018,7 @@
                 </div>
             </div>
             <!-- 화제의 책 소식 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_topic_type">
                 <h3>화제의 책 소식</h3>
                 <div class="swiper_section w_topic">
                     <div class="swiper_wrapper">
@@ -2094,7 +2094,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 알라딘이 만든 사은품 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_gift_type">
                 <h3><a href="#">알라딘이 만든 사은품</a></h3>
                 <div class="swiper_section w_gift">
                     <div class="swiper_wrapper" id="w_gift_wrapper">
@@ -2140,7 +2140,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 이달의 주목도서 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_monthBook_type">
                 <h3>
                     <a href="#">이달의 주목도서</a>
                 </h3>
@@ -2212,7 +2212,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 이 주의 특가 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_specialPrice_type">
                 <h3>
                     <a href="#">이 주의 특가</a>
                 </h3>
@@ -2302,7 +2302,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 알라딘 스페셜 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_aladinSpecial_type">
                 <h3>
                     알라딘 스페셜
                     <span class="label">단독 판매</span>
@@ -2375,7 +2375,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 중간 광고 배너 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_eventbanner_type">
                 <div class="swiper_section w_banner" id="w_eventbanner">
                     <div class="swiper_wrapper" id="w_banner_wrapper">
                         <div class="swiper_item">
@@ -2414,7 +2414,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 투비컨티뉴드 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_specialPrice_type">
                 <h3>
                     <span class="tobelogo">투비컨티뉴드</span>
                     추천 노트
@@ -2488,7 +2488,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 알라디너의 선택 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_aladinerChoice_type">
                 <h3>
                     <a href="#">알라디너의 선택</a>
                 </h3>
@@ -2738,7 +2738,7 @@
                 </div>
             </div>
             <!-- 마지막 광고 배너 -->
-            <div class="welcome_section3">
+            <div class="welcome_section3" id="w_bottombanner_type">
                 <div class="swiper_section w_banner" id="w_bottombanner_wrapper">
                     <div class="swiper_wrapper">
                         <div class="swiper_item">
