Updated changed the duplicated class name for tobe continue section

--- a/index.html
+++ b/index.html
@@ -2414,7 +2414,7 @@
                 <div class="white_circle_prev"></div>
             </div>
             <!-- 투비컨티뉴드 -->
-            <div class="welcome_section3" id="w_specialPrice_type">
+            <div class="welcome_section3" id="w_tobe_type">
                 <h3>
                     <span class="tobelogo">투비컨티뉴드</span>
                     추천 노트
