Updated css and api

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script src="./js/Menu.js"></script>
         <script src="./js/ContentsHover.js"></script>
         <script src="./js/LayerHover.js"></script>
+        <script src="./js/KakaoApi.js"></script>
     </head>
     <body>
         <header>
