temporary set up for data test

--- a/index.html
+++ b/index.html
@@ -1893,7 +1893,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="swiper_item">
+                            <!-- <div class="swiper_item">
                                 <div class="cover">
                                     <a href="#">
                                         <img src="https://image.aladin.co.kr/product/31914/91/cover200/k092833847_1.jpg?RS=170" alt="왜 폭력을 쓰면 안 되나요?">
@@ -2011,7 +2011,7 @@
                                         <a href="#">집착의 법칙 </a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="white_circle_next"></div>
