Updated API  & slick

--- a/index.html
+++ b/index.html
@@ -2159,7 +2159,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper_item">
+                        <!-- <div class="swiper_item">
                             <div class="cover">
                                 <a href="#">
                                     <img src="https://image.aladin.co.kr/product/32090/61/cover200/k922834195_1.jpg?RS=170" alt="탱크">
@@ -2206,7 +2206,7 @@
                                     <a href="#">엄마의 10억</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="white_circle_next"></div>
