--- a/index.html
+++ b/index.html
@@ -2232,7 +2232,7 @@
                                 <div class="price">30% 할인</div>
                             </div>
                         </div>
-                        <div class="swiper_item">
+                        <!-- <div class="swiper_item">
                             <div class="cover">
                                 <a href="#">
                                     <img src="https://image.aladin.co.kr/product/17955/9/cover200/8965182913_1.jpg?RS=170" alt="자연 관찰 스티커북 : 강아지">
@@ -2296,7 +2296,7 @@
                                 </div>
                                 <div class="price">30% 할인</div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="white_circle_next"></div>
