Updated ebook banner

--- a/index.html
+++ b/index.html
@@ -1816,6 +1816,7 @@
                         </li>
                     </ol>
                 </div>
+                <!-- ebook 배너 -->
                 <div class="swiper_section right_ebook_banner">
                     <div class="swiper_wrapper">
                         <div class="swiper_item">
@@ -1823,6 +1824,68 @@
                                 <img src="./img/right_ebook_banner1.jpg" alt="">
                             </a>
                         </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/01/230130_ecalendar_wbr.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230904_dbg_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/01/230130_ecoupon_wbr.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230831_dasan1_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230828_hdj_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230905_w01_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230830_taehaksa_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230825_chang_wbr.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230831_w01_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230828_bookhouse2_wb.jpg" alt="">
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/bn/ebook/2023/03/230829_hrk_wb.jpg" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-pagination">
+                        <span class="swiper-pagination-current">1</span>
+                        /
+                        <span class="swiper-pagination-total">12</span>
                     </div>
                 </div>
             </div>
