Updated for wide banner

--- a/index.html
+++ b/index.html
@@ -1910,6 +1910,11 @@
                 </div>
                 <div class="swiper-button-prev" onclick="plusSlides(-1)"></div>
                 <div class="swiper-button-next" onclick="plusSlides(1)"></div>
+                <div class="swiper-pagination">
+                    <span class="swiper-pagination-current">1</span>
+                    /
+                    <span class="swiper-pagination-total">1</span>
+                </div>
             </div>
             <!-- 추천마법사의 선택 -->
             <div id="jinnyWelcome">
