--- a/index.html
+++ b/index.html
@@ -1908,12 +1908,12 @@
                         </a>
                     </div>
                 </div>
-                <div class="swiper-button-prev" onclick="plusSlides(-1)"></div>
-                <div class="swiper-button-next" onclick="plusSlides(1)"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
                 <div class="swiper-pagination">
                     <span class="swiper-pagination-current">1</span>
                     /
-                    <span class="swiper-pagination-total">1</span>
+                    <span class="swiper-pagination-total">3</span>
                 </div>
             </div>
             <!-- 추천마법사의 선택 -->
