Updated scroll up button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <script src="./js/ContentsHover.js"></script>
         <script src="./js/LayerHover.js"></script>
         <script src="./js/KakaoApi.js"></script>
+        <script src="./js/floatingBn.js"></script>
     </head>
     <body>
         <header>
