--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <header>
             <div class="header_wrap">
-                <div class="w_t_event" class="roof_bnwrap" style="background: rgb(236, 34, 17);">
+                <div class="w_t_event roof_bnwrap" style="background: rgb(236, 34, 17);">
                     <div class="RE_banner_new">
                         <div class="left">
                             <a href="#">
