Connected with sub.html

--- a/sub.html
+++ b/sub.html
@@ -849,6 +849,7 @@
             </div>
         </header>
         <div class="welcome_wrap">
+            <h1>서브페이지다</h1>
         </div>
         <footer>
                 <div class="footer_menu">
