Updated scroll Up button

--- a/sub.html
+++ b/sub.html
@@ -17,7 +17,6 @@
         <script src="./js/Menu.js"></script>
         <script src="./js/ContentsHover.js"></script>
         <script src="./js/LayerHover.js"></script>
-        <script src="./js/KakaoApi.js"></script>
         <script src="./js/floatingBn.js"></script>
     </head>
     <body>
@@ -849,6 +848,7 @@
             </div>
         </header>
         <div class="welcome_wrap">
+            <button type="button" class="go_top btnScrollToTop">위로가기</button>
             <h1>서브페이지다</h1>
         </div>
         <footer>
