--- a/sub.html
+++ b/sub.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://image.aladin.co.kr/img/home/aladin.ico" type="image/x-icon" rel="shortcut icon" />
         <title>지희알라딘</title>
-        <link rel="stylesheet" href="./css/main.css" type="text/css">
+        <!-- <link rel="stylesheet" href="./css/main.css" type="text/css"> -->
+        <link rel="stylesheet" href="./css/sub.css" type="text/css">
         <link rel="stylesheet" href="./css/common.css" type="text/css">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.0.min.js"></script>
@@ -847,9 +848,14 @@
                 </div>
             </div>
         </header>
-        <div class="welcome_wrap">
+        <div class="sub_wrap">
             <button type="button" class="go_top btnScrollToTop">위로가기</button>
             <h1>서브페이지다</h1>
+            <div class="floating_bn_box" id="quickMenuLayer">
+                <div class="left_bn">
+                    <img src="https://image.aladin.co.kr/img/adbn/book/2023/03/230904_hansz_wletop.jpg" alt="">
+                </div>
+            </div>
         </div>
         <footer>
                 <div class="footer_menu">
