--- a/sub.html
+++ b/sub.html
@@ -850,7 +850,38 @@
         </header>
         <div class="sub_wrap">
             <button type="button" class="go_top btnScrollToTop">위로가기</button>
-            <h1>서브페이지다</h1>
+
+            <div class="top_title_wrap">
+                <div class="temp_H10"></div>
+                <div class="left">
+                    <div class="tlist">
+                        <ul>
+                            <li class="label_wrap">
+                                <span>무료배송</span><a href="#"><span>소득공제</span></a>
+                            </li>
+                            <li>
+                                <div>
+                                    <span class="top_main_title">싱크 어게인 (리커버 블랙 에디션)</span> 
+                                    <span class="top_sub1_title">- 모르는 것을 아는 힘</span> 
+                                        <a href="#">
+                                            <img src="./img/icon_top_search.png" style="margin-bottom:-4px;">
+                                        </a>
+                                </div>
+                            </li>
+                            <li class="top_sub2_title">
+                                <a href="#" class="Ere_sub2_title">애덤 그랜트</a>&nbsp;(지은이),<span class="temp_PR10"></span>
+                                <a href="#" class="Ere_sub2_title">이경식</a>&nbsp;(옮긴이)<span class="temp_PR10"></span>
+                                <a class="top_sub2_title" href="#">한국경제신문</a><span class="temp_PR10"></span>2021-03-30<span class="temp_PR10"></span>
+                                <a class="top_sub2_title" href="#">원제 : Think Again</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="right">
+                    <a href="#"><img src="https://image.aladin.co.kr/img/shop/2018/btn_share.png"></a>
+                </div>
+                <div class="clear"></div>
+            </div>
             <div class="floating_bn_box" id="quickMenuLayer">
                 <div class="left_bn">
                     <img src="https://image.aladin.co.kr/img/adbn/book/2023/03/230904_hansz_wletop.jpg" alt="">
