--- a/sub.html
+++ b/sub.html
@@ -850,9 +850,9 @@
         </header>
         <div class="sub_wrap">
             <button type="button" class="go_top btnScrollToTop">위로가기</button>
-
             <div class="top_title_wrap">
                 <div class="temp_H10"></div>
+                <!-- 상단 타이틀 시작 -->
                 <div class="left">
                     <div class="tlist">
                         <ul>
@@ -880,8 +880,13 @@
                 <div class="right">
                     <a href="#"><img src="https://image.aladin.co.kr/img/shop/2018/btn_share.png"></a>
                 </div>
-                <div class="clear"></div>
             </div>
+            <!-- 라인 -->
+            <div class="temp_line1"></div>
+            <!-- 여백 -->
+            <div class="temp_H30"></div>
+            <!-- 상단 타이틀 끝 -->
+            <div class="clear"></div>
             <div class="floating_bn_box" id="quickMenuLayer">
                 <div class="left_bn">
                     <img src="https://image.aladin.co.kr/img/adbn/book/2023/03/230904_hansz_wletop.jpg" alt="">
