--- a/sub.html
+++ b/sub.html
@@ -848,6 +848,7 @@
                 </div>
             </div>
         </header>
+        <div style="padding:3px 0 2px 0;"></div>
         <div class="sub_wrap">
             <button type="button" class="go_top btnScrollToTop">위로가기</button>
             <div class="top_title_wrap">
@@ -887,6 +888,9 @@
             <div class="temp_H30"></div>
             <!-- 상단 타이틀 끝 -->
             <div class="clear"></div>
+        </div>
+        <!-- 도서 커버 -->
+        <div class="book_wrap">
             <div class="floating_bn_box" id="quickMenuLayer">
                 <div class="left_bn">
                     <img src="https://image.aladin.co.kr/img/adbn/book/2023/03/230904_hansz_wletop.jpg" alt="">
