Updated html and css for book wrap section

--- a/sub.html
+++ b/sub.html
@@ -896,6 +896,43 @@
                     <img src="https://image.aladin.co.kr/img/adbn/book/2023/03/230904_hansz_wletop.jpg" alt="">
                 </div>
             </div>
+            <div class="Bcoverwrap">
+                <div class="cover">
+                    <div class="arr2_left new">
+                        <span>이전</span>
+                    </div>
+                    <div class="arr2_rightft new">
+                        <span>다음</span>
+                    </div>
+                    <div id="divFlipImg">
+                        <ul id="book" class="book">
+                            <li>
+                                <div class="coverItem default bk-bookdefault">
+                                    <div class="c_front">
+                                        <img id="CoverMainImage" src="https://image.aladin.co.kr/product/29691/91/cover500/k232838587_1.jpg" alt="싱크 어게인 (리커버 블랙 에디션)">
+                                    </div>
+                                    <div class="c_back">
+                                        <img src="https://image.aladin.co.kr/product/29691/91/letslook/8947547077_b.jpg" style="width:100%;">
+                                    </div>
+                                    <div class="c_left">
+                                        <img src="https://image.aladin.co.kr/product/29691/91/spineflip/8947547077_d.jpg" style="width:100%;">
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="swiper_section">
+                        <div class="swiper_wrapper"></div>
+                    </div>
+                </div>
+                <div class="clear temp_H10"></div>
+            </div>
+            <div class="Binfowrap">
+
+            </div>
+            <div class="clear">
+
+            </div>
         </div>
         <footer>
                 <div class="footer_menu">
