--- a/sub.html
+++ b/sub.html
@@ -901,28 +901,32 @@
                     <div class="arr2_left new">
                         <span>이전</span>
                     </div>
-                    <div class="arr2_rightft new">
+                    <div class="arr2_right new">
                         <span>다음</span>
                     </div>
+                    <!-- 도서 표지 회전 -->
                     <div id="divFlipImg">
                         <ul id="book" class="book">
                             <li>
                                 <div class="coverItem default bk-bookdefault">
                                     <div class="c_front">
-                                        <img id="CoverMainImage" src="https://image.aladin.co.kr/product/29691/91/cover500/k232838587_1.jpg" alt="싱크 어게인 (리커버 블랙 에디션)">
+                                        <img class="imgbox" id="CoverMainImage" src="https://image.aladin.co.kr/product/29691/91/cover500/k232838587_1.jpg" alt="싱크 어게인 (리커버 블랙 에디션)">
                                     </div>
                                     <div class="c_back">
-                                        <img src="https://image.aladin.co.kr/product/29691/91/letslook/8947547077_b.jpg" style="width:100%;">
+                                        <img class="imgbox" src="https://image.aladin.co.kr/product/29691/91/letslook/8947547077_b.jpg" style="width:100%;">
                                     </div>
                                     <div class="c_left">
-                                        <img src="https://image.aladin.co.kr/product/29691/91/spineflip/8947547077_d.jpg" style="width:100%;">
+                                        <img class="imgbox" src="https://image.aladin.co.kr/product/29691/91/spineflip/8947547077_d.jpg" style="width:100%;">
                                     </div>
                                 </div>
                             </li>
                         </ul>
                     </div>
+                    <!-- 도서 내부 슬라이드 쇼 -->
                     <div class="swiper_section">
-                        <div class="swiper_wrapper"></div>
+                        <div class="swiper_wrapper">
+
+                        </div>
                     </div>
                 </div>
                 <div class="clear temp_H10"></div>
