Updated css and html for sub.html

--- a/sub.html
+++ b/sub.html
@@ -898,6 +898,7 @@
             </div>
             <div class="Bcoverwrap">
                 <div class="cover">
+                    <!-- 호버 화살표 -->
                     <div class="arr2_left new">
                         <span>이전</span>
                     </div>
