Updated hover effect

--- a/sub.html
+++ b/sub.html
@@ -19,6 +19,7 @@
         <script src="./js/ContentsHover.js"></script>
         <script src="./js/LayerHover.js"></script>
         <script src="./js/floatingBn.js"></script>
+        <script src="./js/BookRotation.js"></script>
     </head>
     <body>
         <header>
@@ -907,21 +908,11 @@
                     </div>
                     <!-- 도서 표지 회전 -->
                     <div id="divFlipImg">
-                        <ul id="book" class="book">
-                            <li>
-                                <div class="coverItem default bk-bookdefault">
-                                    <div class="c_front">
-                                        <img class="imgbox" id="CoverMainImage" src="https://image.aladin.co.kr/product/29691/91/cover500/k232838587_1.jpg" alt="싱크 어게인 (리커버 블랙 에디션)">
-                                    </div>
-                                    <div class="c_back">
-                                        <img class="imgbox" src="https://image.aladin.co.kr/product/29691/91/letslook/8947547077_b.jpg" style="width:100%;">
-                                    </div>
-                                    <div class="c_left">
-                                        <img class="imgbox" src="https://image.aladin.co.kr/product/29691/91/spineflip/8947547077_d.jpg" style="width:100%;">
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
+                        <section>
+                            <div class="book">
+                                <img class="imgbox" src="./img/sub_book-front.jpg" alt="도서 앞면">
+                            </div>
+                        </section>
                     </div>
                     <!-- 도서 내부 슬라이드 쇼 -->
                     <div class="swiper_section">
