--- a/sub.html
+++ b/sub.html
@@ -2385,7 +2385,7 @@
                                     display: none;
                                 "
                             >
-                                <div id="pnPCLayer">
+                                <div>
                                     <div class="Ere_layerst_Tit7">
                                         <div class="extC">
                                             <img
@@ -2510,7 +2510,6 @@
                                         "
                                     ></div>
                                 </li>
-
                                 <li>
                                     <a
                                         href="javascript:fn_helpLayer_Toggle_V2('Deduct');"
@@ -2562,11 +2561,83 @@
                             </ul>
                         </div>
                         <div class="clear"></div>
+                        <!-- 장바구니 담기 버튼 -->
+                        <div class="btn_cart floatL">
+                            <a href="#">장바구니 담기</a>
+                        </div>
+                        <!-- 구매하기 버튼 -->
+                        <div class="btn_buyitnow floatL marginL4">
+                            <a href="#">바로구매</a>
+                        </div>
+                        <!-- 선물하기 버튼 -->
+                        <div class="btn_gift floatL marginL4">
+                            <a href="#">선물하기</a>
+                        </div>
+                        <!-- 보관하기 버튼 -->
+                        <div class="btn_gift floatL marginL4">
+                            <a href="#">보관함 +</a>
+                        </div>
+                        <div class="temp_H30"></div>
+                        <div class="info_list3">
+                            <ul>
+                                <li>
+                                    <a href="#" class="Ere_sub_gray2 Ere_fs14">
+                                        중고 등록알림 신청<img
+                                            src="./img/p_arrow_right.gif"
+                                            class="p_arrow_btn"
+                                    /></a>
+                                </li>
+                                <li id="C2BSales">
+                                    <a href="#" class="Ere_sub_gray2 Ere_fs14">
+                                        중고로 팔기
+                                        <img
+                                            src="./img/p_arrow_down.gif"
+                                            class="p_arrow_btn"
+                                    /></a>
+                                    <div style="position: relative">
+                                        <div
+                                            id="divUsedSell"
+                                            class="Ere_layerst_list"
+                                            style="
+                                                position: absolute;
+                                                background-color: white;
+                                                z-index: 999;
+                                                display: none;
+                                            "
+                                        >
+                                            <ul>
+                                                <li style="width: 100%">
+                                                    <a href="#"
+                                                        >알라딘에 팔기</a
+                                                    >
+                                                    <div
+                                                        id="gate_layer"
+                                                        style="
+                                                            margin-top: 0px;
+                                                            margin-left: -10px;
+                                                        "
+                                                        class="gate_layer"
+                                                    ></div>
+                                                </li>
+                                                <li style="width: 100%">
+                                                    <a href="#"
+                                                        >회원에게 팔기</a
+                                                    >
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="clear"></div>
+                        </div>
                     </div>
+                    <div class="clear"></div>
                 </div>
             </div>
             <div class="clear"></div>
         </div>
+        <!-- 푸터 시작 -->
         <footer>
             <div class="footer_menu">
                 <ul>
