Updated sub.html 첫번째 탭

--- a/sub.html
+++ b/sub.html
@@ -2577,18 +2577,19 @@
                         <div class="btn_gift floatL marginL4">
                             <a href="#">보관함 +</a>
                         </div>
+                        <div class="clear"></div>
                         <div class="temp_H30"></div>
                         <div class="info_list3">
                             <ul>
                                 <li>
-                                    <a href="#" class="Ere_sub_gray2 Ere_fs14">
+                                    <a href="#" class="grey2 font_sz14">
                                         중고 등록알림 신청<img
                                             src="./img/p_arrow_right.gif"
                                             class="p_arrow_btn"
                                     /></a>
                                 </li>
-                                <li id="C2BSales">
-                                    <a href="#" class="Ere_sub_gray2 Ere_fs14">
+                                <li>
+                                    <a href="#" class="grey2 font_sz14">
                                         중고로 팔기
                                         <img
                                             src="./img/p_arrow_down.gif"
