Update sub.html first section

--- a/sub.html
+++ b/sub.html
@@ -2076,7 +2076,7 @@
                                 </div>
                             </li>
                             <li class="top_sub2_title">
-                                <a href="#" class="Ere_sub2_title"
+                                <a href="#" class="top_sub2_title"
                                     >애덤 그랜트</a
                                 >&nbsp;(지은이),<span class="temp_PR10"></span>
                                 <a href="#" class="Ere_sub2_title">이경식</a
@@ -2100,16 +2100,17 @@
                     /></a>
                 </div>
             </div>
-            <!-- 라인 -->
-            <div class="temp_line1"></div>
             <!-- 여백 -->
             <div class="temp_H30"></div>
             <!-- 상단 타이틀 끝 -->
             <div class="clear"></div>
+            <!-- 라인 -->
+            <div class="temp_line1"></div>
+            <div class="temp_H30"></div>
         </div>
         <!-- 도서 커버 -->
         <div class="book_wrap">
-            <div class="floating_bn_box" id="quickMenuLayer">
+            <div class="floating_bn_box">
                 <div class="left_bn">
                     <img
                         src="https://image.aladin.co.kr/img/adbn/book/2023/03/230904_hansz_wletop.jpg"
