--- a/index.html
+++ b/index.html
@@ -23,20 +23,31 @@
     <body>
         <header>
             <div class="header_wrap">
-                <div class="w_t_event roof_bnwrap" style="background: rgb(236, 34, 17);">
+                <div
+                    class="w_t_event roof_bnwrap"
+                    style="background: rgb(236, 34, 17)"
+                >
                     <div class="RE_banner_new">
                         <div class="left">
-                            <a href="./sub.html">
-                                <img src="https://image.aladin.co.kr/img/bn/book/2023/03/230814_august2_header.jpg" alt="" border="0">
+                            <a href="#">
+                                <img
+                                    src="./img/top_header_L.jpg"
+                                    alt=""
+                                    border="0"
+                                />
                             </a>
                         </div>
                         <div class="right">
-                            <a href="./sub.html">
-                                <img src="https://image.aladin.co.kr/img/bn/book/2023/03/230814_august2_header_r.jpg" alt="" border="0">
+                            <a href="#">
+                                <img
+                                    src="./img/top_header_R.jpg"
+                                    alt=""
+                                    border="0"
+                                />
                             </a>
                         </div>
                         <div class="close">
-                            <a href="./sub.html" alt="닫기">닫기</a>
+                            <a href="#" alt="닫기">닫기</a>
                         </div>
                     </div>
                 </div>
