--- a/sub.html
+++ b/sub.html
@@ -35,34 +35,6 @@
     <body>
         <header>
             <div class="header_wrap">
-                <div
-                    class="w_t_event roof_bnwrap"
-                    style="background: rgb(236, 34, 17)"
-                >
-                    <div class="RE_banner_new">
-                        <div class="left">
-                            <a href="#">
-                                <img
-                                    src="https://image.aladin.co.kr/img/bn/book/2023/03/230814_august2_header.jpg"
-                                    alt=""
-                                    border="0"
-                                />
-                            </a>
-                        </div>
-                        <div class="right">
-                            <a href="#">
-                                <img
-                                    src="https://image.aladin.co.kr/img/bn/book/2023/03/230814_august2_header_r.jpg"
-                                    alt=""
-                                    border="0"
-                                />
-                            </a>
-                        </div>
-                        <div class="close">
-                            <a href="#" alt="닫기">닫기</a>
-                        </div>
-                    </div>
-                </div>
                 <div class="header_top">
                     <div class="inner">
                         <ul class="gnb" id="headerTop_gnb">
@@ -2049,9 +2021,9 @@
             <button type="button" class="go_top btnScrollToTop">
                 위로가기
             </button>
+            <!-- 상단 타이틀 시작 -->
             <div class="top_title_wrap">
                 <div class="temp_H10"></div>
-                <!-- 상단 타이틀 시작 -->
                 <div class="left">
                     <div class="tlist">
                         <ul>
@@ -2244,79 +2216,9 @@
                     </div>
                     <div class="info_list">
                         <ul>
-                            <!-- <li id="ExpectDeliveryDate">
-                                <div class="Litem">
-
-                                </div>
-                                <div class="Ritem">
-                                    지금 택배로 주문하면 9월 8일 출고
-                                </div>
-                                <div class="Ritem">
-                                    (중구 서소문로 89-31 기준)
-                                    <a href="#" class="font_sz14"> 지역변경 </a>
-                                </div>
-                                <div class="Ritem">
-                                    <a href="#"
-                                        ><span class="txt_allbook"
-                                            >모든 책 오늘 출고</span
-                                        ><span
-                                            ><img
-                                                src="https://image.aladin.co.kr/img/shop/2022/p_arrow_down.gif"
-                                                class="p_arrow_btn" /></span
-                                    ></a>
-                                    <div
-                                        class="allbookrelease_layer"
-                                    >
-                                        <div class="layer_title2">
-                                            <h3 class="textC">
-                                                모든 책 오늘 출고
-                                            </h3>
-                                            <div class="close">
-                                                <a href="#"
-                                                    ><img
-                                                        src="https://image.aladin.co.kr/img/shop/2018/btn_top_close1.png"
-                                                /></a>
-                                            </div>
-                                            <div class="temp_H20"></div>
-                                            <p>
-                                                이 도서는 &lt;모든 책 오늘
-                                                출고&gt; 서비스 대상입니다.
-                                            </p>
-                                            <div class="bt_list2">
-                                                <ul>
-                                                    <li>
-                                                        주문하고 당일 출고가
-                                                        되지 않으면 종당 적립금
-                                                        100원을 드립니다.
-                                                    </li>
-                                                    <li>
-                                                        평일 0시~20시까지 주문
-                                                        완료하면 신청할 수
-                                                        있습니다. (토,
-                                                        일/공휴일은 신청 불가)
-                                                    </li>
-                                                    <li>
-                                                        신청 결제방법이나 배송
-                                                        방법에 따라 서비스
-                                                        신청이 불가할 수
-                                                        있습니다.
-                                                        <div
-                                                            class="btn_layermore"
-                                                        >
-                                                            <a href="#"
-                                                                >+ more</a
-                                                            >
-                                                        </div>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li> -->
                             <li id="ExpectDeliveryDate">
                                 <div class="Litem">
-                                    <a href="/events/wevent.aspx?EventId=211729"
+                                    <a href="#"
                                         ><div class="ytz_position">
                                             <svg
                                                 x="0px"
@@ -2449,7 +2351,7 @@
                                     </script>
                                 </div>
                                 <div class="Ritem ytz_space">
-                                    <a href="/events/wevent.aspx?EventId=211729"
+                                    <a href="#"
                                         ><span class="ytz_delivery"
                                             >양탄자배송</span
                                         ></a
@@ -2458,12 +2360,7 @@
                                 </div>
                                 <div class="Ritem">
                                     (중구 서소문로 89-31 기준)
-                                    <a
-                                        href="javascript:FindZip();"
-                                        class="Ere_fs14 Ere_sub_blue"
-                                    >
-                                        지역변경</a
-                                    >
+                                    <a href="#" class="font_sz14"> 지역변경</a>
                                 </div>
                             </li>
                         </ul>
@@ -2696,10 +2593,51 @@
                             <div class="clear"></div>
                         </div>
                     </div>
+                    <div>
+                        <div class="info_more">
+                            <a href="#">
+                                <img src="https://image.aladin.co.kr/img/shop/2018/btn_more.png" style="margin-top:-5px;">
+                            </a>
+                        </div>
+                    </div>
                     <div class="clear"></div>
                 </div>
             </div>
             <div class="clear"></div>
+        </div>
+        <div class="temp_H50"></div>
+        <!-- 스폰서 광고 1 시작-->
+        <div class="bannerwrap_ad" id="ADsponsor0">
+            <ul>
+                <li>
+                    <a
+                        href="#"
+                        ><img
+                            src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad01.jpg"
+                    /></a>
+                </li>
+                <li>
+                    <a
+                        href="#"
+                        ><img
+                            src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad02.jpg"
+                    /></a>
+                </li>
+                <li>
+                    <a
+                        href="#"
+                        ><img
+                            src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad03.jpg"
+                    /></a>
+                </li>
+                <li>
+                    <a
+                        href="#"
+                        ><img
+                            src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad04.jpg"
+                    /></a>
+                </li>
+            </ul>
         </div>
         <!-- 푸터 시작 -->
         <footer>
