updated changed banner colour

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header_wrap">
                 <div
                     class="w_t_event roof_bnwrap"
-                    style="background: rgb(236, 34, 17)"
+                    style="background: rgb(124,91,244)"
                 >
                     <div class="RE_banner_new">
                         <div class="left">
