Updated html and css

--- a/sub.html
+++ b/sub.html
@@ -2081,7 +2081,7 @@
             <div class="temp_H30"></div>
         </div>
         <!-- 도서 커버 -->
-        <div class="book_wrap">
+        <div class="sub_wrap">
             <div class="floating_bn_box">
                 <div class="left_bn">
                     <img
@@ -2151,6 +2151,7 @@
                     </div> -->
                 </div>
                 <div class="clear temp_H10"></div>
+                <!-- 미리보기 버튼 -->
                 <div
                     class="prev_box"
                     style="z-index: 10; position: absolute; top: 765px"
@@ -2162,6 +2163,7 @@
                         미리보기</a
                     >
                 </div>
+                <div class="temp_H20"></div>
             </div>
             <div class="Binfowrap">
                 <div class="info">
@@ -2595,7 +2597,10 @@
                         <div>
                             <div class="info_more">
                                 <a href="#">
-                                    <img src="https://image.aladin.co.kr/img/shop/2018/btn_more.png" style="margin-top:-5px;">
+                                    <img
+                                        src="https://image.aladin.co.kr/img/shop/2018/btn_more.png"
+                                        style="margin-top: -5px"
+                                    />
                                 </a>
                             </div>
                         </div>
@@ -2606,38 +2611,177 @@
             <div class="clear"></div>
         </div>
         <div class="temp_H50"></div>
-        <!-- 스폰서 광고 1 시작-->
+        <!-- 스폰서 광고 1 섹션-->
         <div class="bannerwrap_ad" id="ADsponsor0">
             <ul>
                 <li>
-                    <a
-                        href="#"
+                    <a href="#"
                         ><img
                             src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad01.jpg"
                     /></a>
                 </li>
                 <li>
-                    <a
-                        href="#"
+                    <a href="#"
                         ><img
                             src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad02.jpg"
                     /></a>
                 </li>
                 <li>
-                    <a
-                        href="#"
+                    <a href="#"
                         ><img
                             src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad03.jpg"
                     /></a>
                 </li>
                 <li>
-                    <a
-                        href="#"
+                    <a href="#"
                         ><img
                             src="https://image.aladin.co.kr/img/adbn/book/2023/03/230831_pq_ad04.jpg"
                     /></a>
                 </li>
             </ul>
+        </div>
+        <div class="temp_H60"></div>
+        <!-- 상품 정보 및 주제 섹션  -->
+        <div class="sub_wrap">
+            <div class="mid_LL">기본정보</div>
+            <div class="mid_LS hidden">기본정보</div>
+            <div class="mid_R">
+                <!-- 상품 정보 -->
+                <div class="mid_info_list1">
+                    <ul>
+                        <li>480쪽</li>
+                        <li>152*225mm</li>
+                        <li>912g</li>
+                        <li>ISBN : 9788947547079</li>
+                    </ul>
+                </div>
+                <!-- 주제 분류 -->
+                <div class="clear temp_H20"></div>
+                <div class=".floatL font_sz16 temp_PB10">
+                    <strong>주제 분류</strong>
+                    <div class="btn_check" style="margin-left: 4px">
+                        <a href="#">신간알리미 신청</a>
+                    </div>
+                </div>
+                <div class="mid_info_list2">
+                    <ul id="ulCategory">
+                        <li>
+                            <a href="/home/wbookmain.aspx">국내도서</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=170"
+                                >경제경영</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=2172"
+                                >기업 경영</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=3103&amp;BrowseTarget=List"
+                                ><b>경영 일반</b></a
+                            >
+                            <a
+                                href="javascript:fn_ForeignCategoryToggle();"
+                                class="Ere_sub_gray8 Ere_fs13 foreignCategoryFold"
+                                style="display: none"
+                                >접기<img
+                                    src="//image.aladin.co.kr/img/shop/2018/icon_arrow_fold.png"
+                                    style="margin-bottom: -1px"
+                            /></a>
+                        </li>
+                        <li>
+                            <a href="/home/wbookmain.aspx">국내도서</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=336"
+                                >자기계발</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=70214"
+                                >성공</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=70216&amp;BrowseTarget=List"
+                                ><b>성공학</b></a
+                            >
+                            <a
+                                href="javascript:fn_ForeignCategoryToggle();"
+                                class="Ere_sub_gray8 Ere_fs13 foreignCategoryFold"
+                                style="display: none"
+                                >접기<img
+                                    src="//image.aladin.co.kr/img/shop/2018/icon_arrow_fold.png"
+                                    style="margin-bottom: -1px"
+                            /></a>
+                        </li>
+                        <li>
+                            <a href="/home/wbookmain.aspx">국내도서</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=336"
+                                >자기계발</a
+                            >&nbsp;&gt;&nbsp;<a
+                                href="/shop/wbrowse.aspx?CID=70223&amp;BrowseTarget=List"
+                                ><b>창의적사고/두뇌계발</b></a
+                            >
+                            <a
+                                href="javascript:fn_ForeignCategoryToggle();"
+                                class="Ere_sub_gray8 Ere_fs13 foreignCategoryFold"
+                                style="display: none"
+                                >접기<img
+                                    src="//image.aladin.co.kr/img/shop/2018/icon_arrow_fold.png"
+                                    style="margin-bottom: -1px"
+                            /></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="temp_line2"></div>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <!-- 원서 번역서 섹션  -->
+        <div class="sub_wrap">
+            <div class="mid_R">
+                <div id="divForeignBookTitle">
+                    <div class="mid_LL hidden">시리즈</div>
+                </div>
+                <div>
+                <!-- 고정레이어 -->
+                <div style="z-index: 99">
+                    <div class="floatL font_sz16">
+                        <strong>이 책의 원서/번역서</strong><br />
+                        <div id="foreignFixBookBasketResult">
+                            총
+                            <span class="font_pink font_str">1권</span> 선택,
+                            구매가
+                            <span class="font_pink font_str">16,310</span>원
+                        </div>
+                    </div>
+                    <div class="floatR">
+                        <div class="btn_check">
+                            <a class="btnCheckAll">전체선택</a>
+                        </div>
+                        <div class="btn_sm_keep">
+                            <a class="btnToSaveListAll" href="#">보관함 담기</a>
+                        </div>
+                        <div class="btn_sm_cart">
+                            <a class="btnToBasketAll" href="#">장바구니 담기</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="clear temp_H20"></div>
+                <div class="mid_info_list3">
+                    <ul>
+                        <li>
+                            <a class="check"
+                                ><img
+                                    id="cbForeignBookImg0"
+                                    src="./img/icon_check_off.png"
+                                    style="margin-bottom: -5px"
+                            /></a>
+                            <a
+                                href="#"
+                            >
+                                Think Again (Paperback) Paperback</a
+                            >
+                        </li>
+                    </ul>
+                <div class="clear"></div>
+                <div class="temp_line2"></div>
+                </div>
+            </div>
         </div>
         <!-- 푸터 시작 -->
         <footer>
